syntax = "proto3";

package send;

option go_package = "shapeup.sending.v1;sendsvc";

service Sending {
  rpc SendEmail(EmailRequest) returns (EmailResponse);
}

message EmailRequest {
  string message = 1;
  string email = 2;
}

message EmailResponse {
  string email = 1;
}